[package]
name = "tomoe-wm"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
xdg = "2.5"

[dependencies.smithay]
version = "0.7"
default-features = false
features = [
    "backend_winit",
    "backend_egl",
    "wayland_frontend",
    "desktop",
    "renderer_gl",
]
